Simplify states and sprite selection.

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -49,24 +49,22 @@
     <Compile Include="BaseClasses\BasePhysicalObject.cs" />
     <Compile Include="BaseClasses\BaseGameObject.cs" />
     <Compile Include="BlockObjects\Brick.cs" />
-    <Compile Include="BlockObjects\BrickStates\BrickBumped.cs" />
-    <Compile Include="BlockObjects\BrickStates\BrickDestroyed.cs" />
-    <Compile Include="BlockObjects\BrickStates\BrickHidden.cs" />
-    <Compile Include="BlockObjects\BrickStates\BrickNormal.cs" />
-    <Compile Include="BlockObjects\BrickStates\BrickUsed.cs" />
+    <Compile Include="BlockObjects\BrickStates\Bumped.cs" />
+    <Compile Include="BlockObjects\BrickStates\Destroyed.cs" />
+    <Compile Include="BlockObjects\BrickStates\Hidden.cs" />
+    <Compile Include="BlockObjects\BrickStates\Normal.cs" />
+    <Compile Include="BlockObjects\BrickStates\Used.cs" />
     <Compile Include="BlockObjects\Floor.cs" />
-    <Compile Include="BlockObjects\FloorStates\FloorHidden.cs" />
-    <Compile Include="BlockObjects\FloorStates\FloorNormal.cs" />
+    <Compile Include="BlockObjects\FloorStates\Normal.cs" />
     <Compile Include="BlockObjects\Pipeline.cs" />
-    <Compile Include="BlockObjects\PipelineStates\PipelineNormal.cs" />
+    <Compile Include="BlockObjects\PipelineStates\Normal.cs" />
     <Compile Include="BlockObjects\Question.cs" />
-    <Compile Include="BlockObjects\QuestionStates\QuestionBumped.cs" />
-    <Compile Include="BlockObjects\QuestionStates\QuestionHidden.cs" />
-    <Compile Include="BlockObjects\QuestionStates\QuestionNormal.cs" />
-    <Compile Include="BlockObjects\QuestionStates\QuestionUsed.cs" />
+    <Compile Include="BlockObjects\QuestionStates\Bumped.cs" />
+    <Compile Include="BlockObjects\QuestionStates\Hidden.cs" />
+    <Compile Include="BlockObjects\QuestionStates\Normal.cs" />
+    <Compile Include="BlockObjects\QuestionStates\Used.cs" />
     <Compile Include="BlockObjects\Stair.cs" />
-    <Compile Include="BlockObjects\StairStates\StairHidden.cs" />
-    <Compile Include="BlockObjects\StairStates\StairNormal.cs" />
+    <Compile Include="BlockObjects\StairStates\Normal.cs" />
     <Compile Include="BaseClasses\BaseCommand.cs" />
     <Compile Include="Commands\ActionCommand.cs" />
     <Compile Include="Commands\FallCommand.cs" />
@@ -80,8 +78,8 @@
     <Compile Include="Factories\CommandFactory.cs" />
     <Compile Include="Factories\SpriteFactory.cs" />
     <Compile Include="EnemyObjects\Goomba.cs" />
-    <Compile Include="EnemyObjects\GoombaStates\GoombaDefeated.cs" />
-    <Compile Include="EnemyObjects\GoombaStates\GoombaNormal.cs" />
+    <Compile Include="EnemyObjects\GoombaStates\Defeated.cs" />
+    <Compile Include="EnemyObjects\GoombaStates\Normal.cs" />
     <Compile Include="Interfaces\ICommandFactory.cs" />
     <Compile Include="Interfaces\IGameObjectManager.cs" />
     <Compile Include="Interfaces\States\IGoombaState.cs" />
@@ -92,25 +90,21 @@
     <Compile Include="Interfaces\ISprite.cs" />
     <Compile Include="Interfaces\ISpriteFactory.cs" />
     <Compile Include="ItemObjects\Coin.cs" />
-    <Compile Include="ItemObjects\CoinStates\CoinDefeated.cs" />
-    <Compile Include="ItemObjects\CoinStates\CoinNormal.cs" />
+    <Compile Include="ItemObjects\CoinStates\Collected.cs" />
+    <Compile Include="ItemObjects\CoinStates\Normal.cs" />
     <Compile Include="ItemObjects\FireFlower.cs" />
-    <Compile Include="ItemObjects\FireFlowerStates\FireFlowerDefeated.cs" />
-    <Compile Include="ItemObjects\FireFlowerStates\FireFlowerNormal.cs" />
-    <Compile Include="ItemObjects\FireFlowerStates\FireFlowerUnveil.cs" />
+    <Compile Include="ItemObjects\FireFlowerStates\Normal.cs" />
+    <Compile Include="ItemObjects\FireFlowerStates\Unveil.cs" />
     <Compile Include="ItemObjects\OneUpMushroom.cs" />
-    <Compile Include="ItemObjects\OneUpMushroomStates\OneUpMushroomDefeated.cs" />
-    <Compile Include="ItemObjects\OneUpMushroomStates\OneUpNormal.cs" />
+    <Compile Include="ItemObjects\OneUpMushroomStates\Normal.cs" />
     <Compile Include="ItemObjects\Star.cs" />
-    <Compile Include="ItemObjects\StarStates\StarDefeated.cs" />
-    <Compile Include="ItemObjects\StarStates\StarNormal.cs" />
+    <Compile Include="ItemObjects\StarStates\Normal.cs" />
     <Compile Include="ItemObjects\SuperMushroom.cs" />
-    <Compile Include="ItemObjects\SuperMushroomStates\SuperMushroomDefeated.cs" />
-    <Compile Include="ItemObjects\SuperMushroomStates\SuperMushroomNormal.cs" />
+    <Compile Include="ItemObjects\SuperMushroomStates\Normal.cs" />
     <Compile Include="EnemyObjects\Koopa.cs" />
-    <Compile Include="EnemyObjects\KoopaStates\KoopaDefeated.cs" />
-    <Compile Include="EnemyObjects\KoopaStates\KoopaJumpOn.cs" />
-    <Compile Include="EnemyObjects\KoopaStates\KoopaNormal.cs" />
+    <Compile Include="EnemyObjects\KoopaStates\Defeated.cs" />
+    <Compile Include="EnemyObjects\KoopaStates\Shell.cs" />
+    <Compile Include="EnemyObjects\KoopaStates\Normal.cs" />
     <Compile Include="LevelGen\LevelReader.cs" />
     <Compile Include="Interfaces\States\IMarioDirectionState.cs" />
     <Compile Include="MarioObjects\DirectionStates\DirectionRight.cs" />
