Apply changes to Mario.

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -108,21 +108,21 @@
     <Compile Include="EnemyObjects\KoopaStates\Normal.cs" />
     <Compile Include="LevelGen\LevelReader.cs" />
     <Compile Include="Interfaces\States\IMarioDirectionState.cs" />
-    <Compile Include="MarioObjects\DirectionStates\DirectionRight.cs" />
-    <Compile Include="MarioObjects\DirectionStates\DirectionLeft.cs" />
+    <Compile Include="MarioObjects\DirectionStates\Right.cs" />
+    <Compile Include="MarioObjects\DirectionStates\Left.cs" />
     <Compile Include="Interfaces\States\IMarioMovementState.cs" />
     <Compile Include="Interfaces\States\IMarioPowerUpState.cs" />
-    <Compile Include="MarioObjects\PowerUpStates\PowerUpDead.cs" />
-    <Compile Include="MarioObjects\PowerUpStates\PowerUpFire.cs" />
-    <Compile Include="MarioObjects\PowerUpStates\PowerUpStandard.cs" />
+    <Compile Include="MarioObjects\PowerUpStates\Dead.cs" />
+    <Compile Include="MarioObjects\PowerUpStates\Fire.cs" />
+    <Compile Include="MarioObjects\PowerUpStates\Standard.cs" />
     <Compile Include="BaseClasses\BaseSprite.cs" />
     <Compile Include="Sprites\BlockSprites\BrickPieceSprite.cs" />
     <Compile Include="MarioObjects\Mario.cs" />
-    <Compile Include="MarioObjects\MovementStates\MovementCrouching.cs" />
-    <Compile Include="MarioObjects\MovementStates\MovementIdle.cs" />
-    <Compile Include="MarioObjects\MovementStates\MovementJumping.cs" />
-    <Compile Include="MarioObjects\MovementStates\MovementWalking.cs" />
-    <Compile Include="MarioObjects\PowerUpStates\PowerUpSuper.cs" />
+    <Compile Include="MarioObjects\MovementStates\Crouching.cs" />
+    <Compile Include="MarioObjects\MovementStates\Idle.cs" />
+    <Compile Include="MarioObjects\MovementStates\Jumping.cs" />
+    <Compile Include="MarioObjects\MovementStates\Walking.cs" />
+    <Compile Include="MarioObjects\PowerUpStates\Super.cs" />
     <Compile Include="Sprites\AnimatedSprite.cs" />
     <Compile Include="Sprites\SlicedSprite.cs" />
     <Compile Include="Sprites\StaticSprite.cs" />
