Add Mario's protection states.

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Interfaces\States\IKoopaState.cs" />
     <Compile Include="Interfaces\ISprite.cs" />
     <Compile Include="Interfaces\ISpriteFactory.cs" />
+    <Compile Include="Interfaces\States\IMarioDirectionState.cs" />
     <Compile Include="ItemObjects\Coin.cs" />
     <Compile Include="ItemObjects\CoinStates\Collected.cs" />
     <Compile Include="ItemObjects\CoinStates\Normal.cs" />
@@ -107,15 +108,18 @@
     <Compile Include="EnemyObjects\KoopaStates\Shell.cs" />
     <Compile Include="EnemyObjects\KoopaStates\Normal.cs" />
     <Compile Include="LevelGen\LevelReader.cs" />
-    <Compile Include="Interfaces\States\IMarioDirectionState.cs" />
+    <Compile Include="Interfaces\States\IMarioProtectionState.cs" />
     <Compile Include="MarioObjects\DirectionStates\Right.cs" />
     <Compile Include="MarioObjects\DirectionStates\Left.cs" />
     <Compile Include="Interfaces\States\IMarioMovementState.cs" />
     <Compile Include="Interfaces\States\IMarioPowerUpState.cs" />
-    <Compile Include="MarioObjects\PowerUpStates\Dead.cs" />
+    <Compile Include="MarioObjects\ProtectionStates\Dead.cs" />
     <Compile Include="MarioObjects\PowerUpStates\Fire.cs" />
     <Compile Include="MarioObjects\PowerUpStates\Standard.cs" />
     <Compile Include="BaseClasses\BaseSprite.cs" />
+    <Compile Include="MarioObjects\ProtectionStates\Normal.cs" />
+    <Compile Include="MarioObjects\ProtectionStates\Protected.cs" />
+    <Compile Include="MarioObjects\ProtectionStates\Starred.cs" />
     <Compile Include="Sprites\BlockSprites\BrickPieceSprite.cs" />
     <Compile Include="MarioObjects\Mario.cs" />
     <Compile Include="MarioObjects\MovementStates\Crouching.cs" />
