--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Commands\RightCommand.cs" />
     <Compile Include="BaseClasses\BaseController.cs" />
     <Compile Include="Controllers\KeyboardController.cs" />
+    <Compile Include="EnemyObjects\KoopaStates\MovingShell.cs" />
     <Compile Include="Factories\CommandFactory.cs" />
     <Compile Include="Factories\SpriteFactory.cs" />
     <Compile Include="EnemyObjects\Goomba.cs" />
@@ -102,12 +103,15 @@
     <Compile Include="ItemObjects\FireFlowerStates\Normal.cs" />
     <Compile Include="ItemObjects\FireFlowerStates\Unveil.cs" />
     <Compile Include="ItemObjects\OneUpMushroom.cs" />
+    <Compile Include="ItemObjects\OneUpMushroomStates\Moving.cs" />
     <Compile Include="ItemObjects\OneUpMushroomStates\Normal.cs" />
     <Compile Include="ItemObjects\OneUpMushroomStates\Unveil.cs" />
     <Compile Include="ItemObjects\Star.cs" />
+    <Compile Include="ItemObjects\StarStates\Moving.cs" />
     <Compile Include="ItemObjects\StarStates\Normal.cs" />
     <Compile Include="ItemObjects\StarStates\Unveil.cs" />
     <Compile Include="ItemObjects\SuperMushroom.cs" />
+    <Compile Include="ItemObjects\SuperMushroomStates\Moving.cs" />
     <Compile Include="ItemObjects\SuperMushroomStates\Normal.cs" />
     <Compile Include="EnemyObjects\Koopa.cs" />
     <Compile Include="EnemyObjects\KoopaStates\Defeated.cs" />
