--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -68,21 +68,21 @@
     <Compile Include="BlockObjects\Stair.cs" />
     <Compile Include="BlockObjects\StairStates\Normal.cs" />
     <Compile Include="BaseClasses\BaseCommand.cs" />
-    <Compile Include="Commands\ActionCommand.cs" />
+    <Compile Include="Commands\Action.cs" />
     <Compile Include="Commands\RightPress.cs" />
     <Compile Include="Commands\LeftPress.cs" />
     <Compile Include="Commands\CrouchPress.cs" />
     <Compile Include="Commands\JumpPress.cs" />
-    <Compile Include="Commands\CrouchReleaseCommand.cs" />
-    <Compile Include="Commands\JumpReleaseCommand.cs" />
-    <Compile Include="Commands\CrouchCommand.cs" />
-    <Compile Include="Commands\RightReleaseCommand.cs" />
-    <Compile Include="Commands\LeftReleaseCommand.cs" />
-    <Compile Include="Commands\ToggleGravityCommand.cs" />
-    <Compile Include="Commands\JumpCommand.cs" />
-    <Compile Include="Commands\LeftCommand.cs" />
-    <Compile Include="Commands\PauseCommand.cs" />
-    <Compile Include="Commands\RightCommand.cs" />
+    <Compile Include="Commands\CrouchRelease.cs" />
+    <Compile Include="Commands\JumpRelease.cs" />
+    <Compile Include="Commands\Crouch.cs" />
+    <Compile Include="Commands\RightRelease.cs" />
+    <Compile Include="Commands\LeftRelease.cs" />
+    <Compile Include="Commands\ToggleGravity.cs" />
+    <Compile Include="Commands\Jump.cs" />
+    <Compile Include="Commands\Left.cs" />
+    <Compile Include="Commands\Pause.cs" />
+    <Compile Include="Commands\Right.cs" />
     <Compile Include="BaseClasses\BaseController.cs" />
     <Compile Include="Controllers\KeyboardController.cs" />
     <Compile Include="EnemyObjects\KoopaStates\MovingShell.cs" />
@@ -145,8 +145,8 @@
     <Compile Include="Sprites\AnimatedSprite.cs" />
     <Compile Include="Sprites\SlicedSprite.cs" />
     <Compile Include="Sprites\StaticSprite.cs" />
-    <Compile Include="Commands\DeadStateCommand.cs" />
-    <Compile Include="Commands\FireStateCommand.cs" />
+    <Compile Include="Commands\DeadState.cs" />
+    <Compile Include="Commands\FireState.cs" />
     <Compile Include="Theming\GameModel.cs" />
     <Compile Include="Theming\GameWorld.cs" />
     <Compile Include="Theming\GameScript.cs" />
@@ -156,8 +156,8 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Commands\StandardStateCommand.cs" />
-    <Compile Include="Commands\SuperStateCommand.cs" />
+    <Compile Include="Commands\StandardState.cs" />
+    <Compile Include="Commands\SuperState.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
