--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -166,6 +166,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CodeReviews\CodeReviewCai1.txt" />
+    <Content Include="CodeReviews\CodeReviewWenli.txt" />
     <Content Include="Content\BrickPieces.png" />
     <Content Include="Content\FireStandingLeft.png" />
     <Content Include="Content\FireStandingRight.png" />
