New collision mode(left/right part of block) is added, now only one brick/question block will be bumped at one time.

--- a/.gitignore
+++ b/.gitignore
@@ -287,3 +287,5 @@ __pycache__/
 *.odx.cs
 *.xsd.cs
 /MelloMario/XMLFile.xml
+/MelloMario/MelloMario/BaseClasses/CompressedBlockObject.cs
+/MelloMario/MelloMario/BaseClasses/CompressedBlockObject.cs
