Json work updated.

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -124,7 +124,7 @@
     <Compile Include="EnemyObjects\KoopaStates\Shell.cs" />
     <Compile Include="EnemyObjects\KoopaStates\Normal.cs" />
     <Compile Include="ItemObjects\SuperMushroomStates\Unveil.cs" />
-    <Compile Include="LevelGen\LevelReaderJson.cs" />
+    <Compile Include="LevelGen\LevelIOJson.cs" />
     <Compile Include="LevelGen\LevelReader.cs" />
     <Compile Include="Interfaces\States\IMarioProtectionState.cs" />
     <Compile Include="Interfaces\States\IMarioMovementState.cs" />
