--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -70,6 +70,7 @@
     <Compile Include="BlockObjects\StairStates\Normal.cs" />
     <Compile Include="BaseClasses\BaseCommand.cs" />
     <Compile Include="Commands\Action.cs" />
+    <Compile Include="Commands\Quit.cs" />
     <Compile Include="Commands\RightPress.cs" />
     <Compile Include="Commands\LeftPress.cs" />
     <Compile Include="Commands\CrouchPress.cs" />
