--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -95,18 +95,18 @@
     <Compile Include="EnemyObjects\GoombaStates\Defeated.cs" />
     <Compile Include="EnemyObjects\GoombaStates\Normal.cs" />
     <Compile Include="Game2.cs" />
-    <Compile Include="Interfaces\ICommandFactory.cs" />
-    <Compile Include="Interfaces\IGameObjectFactory.cs" />
-    <Compile Include="Interfaces\IGameCharacter.cs" />
+    <Compile Include="Interfaces\Factories\ICommandFactory.cs" />
+    <Compile Include="Interfaces\Factories\IGameObjectFactory.cs" />
+    <Compile Include="Interfaces\Objects\IGameCharacter.cs" />
     <Compile Include="Interfaces\IGameWorld.cs" />
-    <Compile Include="Interfaces\States\IState.cs" />
-    <Compile Include="Interfaces\States\IGoombaState.cs" />
-    <Compile Include="Interfaces\IGameObject.cs" />
-    <Compile Include="Interfaces\States\IBlockState.cs" />
-    <Compile Include="Interfaces\States\IItemState.cs" />
-    <Compile Include="Interfaces\States\IKoopaState.cs" />
+    <Compile Include="Interfaces\Objects\States\IState.cs" />
+    <Compile Include="Interfaces\Objects\States\IGoombaState.cs" />
+    <Compile Include="Interfaces\Objects\IGameObject.cs" />
+    <Compile Include="Interfaces\Objects\States\IBlockState.cs" />
+    <Compile Include="Interfaces\Objects\States\IItemState.cs" />
+    <Compile Include="Interfaces\Objects\States\IKoopaState.cs" />
     <Compile Include="Interfaces\ISprite.cs" />
-    <Compile Include="Interfaces\ISpriteFactory.cs" />
+    <Compile Include="Interfaces\Factories\ISpriteFactory.cs" />
     <Compile Include="ItemObjects\Coin.cs" />
     <Compile Include="ItemObjects\CoinStates\Normal.cs" />
     <Compile Include="ItemObjects\CoinStates\Unveil.cs" />
@@ -131,9 +131,9 @@
     <Compile Include="LevelGen\GameWorldConverter.cs" />
     <Compile Include="LevelGen\LevelIOJson.cs" />
     <Compile Include="LevelGen\LevelReader.cs" />
-    <Compile Include="Interfaces\States\IMarioProtectionState.cs" />
-    <Compile Include="Interfaces\States\IMarioMovementState.cs" />
-    <Compile Include="Interfaces\States\IMarioPowerUpState.cs" />
+    <Compile Include="Interfaces\Objects\States\IMarioProtectionState.cs" />
+    <Compile Include="Interfaces\Objects\States\IMarioMovementState.cs" />
+    <Compile Include="Interfaces\Objects\States\IMarioPowerUpState.cs" />
     <Compile Include="MarioObjects\PlayerMario.cs" />
     <Compile Include="MarioObjects\ProtectionStates\Dead.cs" />
     <Compile Include="MarioObjects\PowerUpStates\Fire.cs" />
