--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -94,6 +94,7 @@
     <Compile Include="EnemyObjects\GoombaStates\Normal.cs" />
     <Compile Include="Interfaces\Factories\ICommandFactory.cs" />
     <Compile Include="Interfaces\Factories\IGameObjectFactory.cs" />
+    <Compile Include="Interfaces\IScript.cs" />
     <Compile Include="Interfaces\IGameModel.cs" />
     <Compile Include="Interfaces\Objects\IGameCharacter.cs" />
     <Compile Include="Interfaces\IGameWorld.cs" />
@@ -124,6 +125,7 @@
     <Compile Include="EnemyObjects\KoopaStates\Shell.cs" />
     <Compile Include="EnemyObjects\KoopaStates\Normal.cs" />
     <Compile Include="ItemObjects\SuperMushroomStates\Unveil.cs" />
+    <Compile Include="Scripts\PausedScript.cs" />
     <Compile Include="LevelGen\BaseGameObjectConverter.cs" />
     <Compile Include="LevelGen\CharacterConverter.cs" />
     <Compile Include="LevelGen\EncapsulatedObject.cs" />
@@ -154,7 +156,7 @@
     <Compile Include="Theming\GameModel.cs" />
     <Compile Include="Theming\Camera.cs" />
     <Compile Include="Theming\GameWorld.cs" />
-    <Compile Include="Theming\GameScript.cs" />
+    <Compile Include="Scripts\PlayingScript.cs" />
     <Compile Include="Interfaces\ICommand.cs" />
     <Compile Include="Controllers\GamePadController.cs" />
     <Compile Include="Interfaces\IController.cs" />
