--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Sprites\AnimatedSprite.cs" />
     <Compile Include="Sprites\SlicedSprite.cs" />
     <Compile Include="Sprites\StaticSprite.cs" />
+    <Compile Include="Theming\GameDataBase.cs" />
     <Compile Include="Theming\GameModel.cs" />
     <Compile Include="Containers\GameWorld.cs" />
     <Compile Include="Scripts\PlayingScript.cs" />
@@ -240,7 +241,6 @@
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
-    <None Include="ClassDiagram1.cd" />
     <None Include="Content\Level1.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
